# cybersecurity-project-1

./: .gitignore  README.md  app.py  db.py  pyproject.toml
modules/: logging_config.py  unsecure_passwords.py
templates/: admin.html  base.html  login.html  notes.html  register.html
